Fix section-header margin to center properly and prevent misalignment

--- a/style.css
+++ b/style.css
@@ -2372,7 +2372,7 @@ select option:checked {
 
     .section-header {
         padding: 25px 25px 20px;
-        margin: -35px -25px 30px -25px;
+        margin: -35px 0 30px 0;
     }
 
     .section-header-logo {
